# so2-projekt

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: display.h  fork.h  philosopher.h
projekt2/: client.py  main.py  message_queue.py  server.py
src/: display.cpp  fork.cpp  main.cpp  philosopher.cpp
